--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <!-- Aplicaciones -->
         <div class="app" onclick="redirectTo('https://play.google.com/store/apps/details?id=com.example')">
             <img src="https://via.placeholder.com/100" alt="App 1">
-            <h2>Ejemplo App 1</h2>
-            <p>Descripción corta de la aplicación.</p>
+            <h2>Her New Memorys</h2>
+            <p>Her New Memory Mod APK es como adentrarse en un libro de cuentos en el que encuentras a una chica que no tiene recuerdos y tienes la opción de ayudarla a redescubrir su pasado o mantenerla a tu lado. Este juego combina elementos de cuidado, construcción de relaciones y resolución de misterios. La narrativa es conmovedora y se centra en forjar una conexión con la chica y ver cómo se desarrolla una historia de amor única a medida que aprendes sobre su historia.</p>
         </div>
 
         <div class="app" onclick="redirectTo('https://play.google.com/store/apps/details?id=com.example2')">
