--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="app-container" id="appList">
         <!-- Aplicaciones -->
         <div class="app" onclick="redirectTo('https://play.google.com/store/apps/details?id=com.example')">
-            <img src="https://via.placeholder.com/100" alt="App 1">
+            <img src="https://github.com/TWiegertMC/h-game-store/blob/main/capsule_616x353.jpg" alt="App 1">
             <h2>Her New Memorys</h2>
             <p>Her New Memory Mod APK es como adentrarse en un libro de cuentos en el que encuentras a una chica que no tiene recuerdos y tienes la opción de ayudarla a redescubrir su pasado o mantenerla a tu lado. Este juego combina elementos de cuidado, construcción de relaciones y resolución de misterios. La narrativa es conmovedora y se centra en forjar una conexión con la chica y ver cómo se desarrolla una historia de amor única a medida que aprendes sobre su historia.</p>
         </div>
