--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
     <header>
-        <h1>H Game Store</h1>
+        <h1>H Games Store</h1>
         <input type="text" id="searchBar" placeholder="Buscar apps..." onkeyup="searchApps()">
     </header>
 
