--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <div class="app-container" id="appList">
         <!-- Aplicaciones -->
         <div class="app" onclick="redirectTo('https://play.google.com/store/apps/details?id=com.example')">
-            <img src="https://via.placeholder.com/100" alt="App 1">
-            <h2>Ejemplo App 1</h2>
+            <img src="https://raw.githubusercontent.com/TWiegertMC/h-game-store/refs/heads/main/her-new-memorys.jpg" alt="App 1">
+            <h2>Her New Memorys</h2>
             <p>Descripción corta.</p>
         </div>
 
