--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
     <div class="app-container" id="appList">
         <!-- Aplicaciones -->
-        <div class="app" onclick="redirectTo('https://play.google.com/store/apps/details?id=com.example')">
+        <div class="app" onclick="redirectTo('https://web.tresorit.com/l/Q3sHM#DUBNccrp9wzX1DX2K_lnlQ')">
             <img src="https://raw.githubusercontent.com/TWiegertMC/h-game-store/refs/heads/main/her-new-memorys.jpg" alt="App 1">
             <h2>Her New Memorys</h2>
-            <p>Descripción corta.</p>
+            <p>Her New Memory es como adentrarse en un libro de cuentos en el que encuentras a una chica que no tiene recuerdos y tienes la opción de ayudarla a redescubrir su pasado o mantenerla a tu lado. Este juego combina elementos de cuidado, construcción de relaciones y resolución de misterios.</p>
         </div>
 
         <div class="app" onclick="redirectTo('https://play.google.com/store/apps/details?id=com.example2')">
