index.html editado!!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H Game Store</title>
+    <title>H Games Store</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,7 +74,7 @@
 <body>
 
     <header>
-        <h1>H Game Store</h1>
+        <h1>H Games Store</h1>
         <input type="text" id="searchBar" placeholder="Buscar apps..." onkeyup="searchApps()">
     </header>
 
