--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="app-container" id="appList">
         <!-- Aplicaciones -->
-        <div class="app" onclick="redirectTo('https://hstore00.wordpress.com/her-new-memorys/')">
+        <div class="app" onclick="redirectTo('http://hstore.great-site.net/her-new-memorys.html')">
             <img src="https://raw.githubusercontent.com/TWiegertMC/h-game-store/refs/heads/main/her-new-memorys.jpg" alt="App 1">
             <h2>Her New Memorys</h2>
         </div>
