--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     <header>
         <h1>H Games Store</h1>
+        <h4>Peso: 210 MB</h4>
         <input type="text" id="searchBar" placeholder="Buscar apps..." onkeyup="searchApps()">
     </header>
 
